change the font and layout of the table

--- a/report_template.html
+++ b/report_template.html
@@ -38,13 +38,17 @@
             width: 80%;
         }
         table, th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
+            border: 1px solid #dee2e6;
+            padding: 10px; /* Adjust padding for a cleaner look */
             text-align: center;
+            font-size: 14px; /* Slightly larger font */
+            white-space: nowrap; /* Prevent numbers and headers from wrapping to the next line */
         }
+
         th {
             background-color: #343a40; /* A professional dark gray */
             color: white;
+            font-weight: bold;
         }
         timestamp {
             position: absolute;
